@@ -121,4 +121,8 @@ daemons saslauthd and pwcheck.
 15Jun08: Supported nested calls to EM#run. Many people contributed ideas to
 	this, notably raggi and tmm1.
 20Jul08: Accepted patch from tmm1 for EM#fork_reactor.
-
+28Jul08: Added a Postgres3 implementation, written by FCianfrocca.
+14Aug08: Added a patch by Mike Murphy to support basic auth in the http
+client.
+28Aug08: Added a patch by tmm1 to fix a longstanding problem with Java
+data-sends.
